--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: c11e3d06f9234685853d81e4c6d8994a95e0b051
+% Commit: 6476359240df781481e818b0e98a857c45dfa907
 % Date: 2023-11-07
 % ---------------------------
 
@@ -3143,22 +3143,6 @@
 }
 @article{balan.tudor:10:stochastic,
   author        = {Balan, Raluca M. and Tudor, Ciprian A.},
-  title         = {The stochastic wave equation with fractional noise: a random field approach},
-  journal       = {Stochastic Process. Appl.},
-  fjournal      = {Stochastic Processes and their Applications},
-  volume        = {120},
-  year          = {2010},
-  number        = {12},
-  pages         = {2468--2494},
-  issn          = {0304-4149},
-  mrclass       = {60H15 (60G60 60H05)},
-  mrnumber      = {2728174},
-  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
-  doi           = {10.1016/j.spa.2010.08.006},
-  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-@article{balan.tudor:10:stochastic*1,
-  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
   title         = {Stochastic heat equation with multiplicative fractional-colored noise},
   journal       = {J. Theoret. Probab.},
   fjournal      = {Journal of Theoretical Probability},
@@ -3172,6 +3156,22 @@
   mrreviewer    = {David Nualart},
   doi           = {10.1007/s10959-009-0237-3},
   url           = {https://doi.org/10.1007/s10959-009-0237-3}
+}
+@article{balan.tudor:10:stochastic*1,
+  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
+  title         = {The stochastic wave equation with fractional noise: a random field approach},
+  journal       = {Stochastic Process. Appl.},
+  fjournal      = {Stochastic Processes and their Applications},
+  volume        = {120},
+  year          = {2010},
+  number        = {12},
+  pages         = {2468--2494},
+  issn          = {0304-4149},
+  mrclass       = {60H15 (60G60 60H05)},
+  mrnumber      = {2728174},
+  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
+  doi           = {10.1016/j.spa.2010.08.006},
+  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 @article{balan.yuan:22:spatial,
   author        = {Balan, Raluca M. and Yuan, Wangjun},
@@ -7735,21 +7735,6 @@
 }
 @article{borodin.corwin.ea:15:spectral,
   author        = {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and Sasamoto, Tomohiro},
-  title         = {Spectral theory for interacting particle systems solvable by coordinate {B}ethe ansatz},
-  journal       = {Comm. Math. Phys.},
-  fjournal      = {Communications in Mathematical Physics},
-  volume        = {339},
-  year          = {2015},
-  number        = {3},
-  pages         = {1167--1245},
-  issn          = {0010-3616},
-  mrclass       = {82B23 (81R12)},
-  mrnumber      = {3385995},
-  doi           = {10.1007/s00220-015-2424-7},
-  url           = {https://doi.org/10.1007/s00220-015-2424-7}
-}
-@article{borodin.corwin.ea:15:spectral*1,
-  author        = {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and Sasamoto, Tomohiro},
   title         = {Spectral theory for the {$q$}-{B}oson particle system},
   journal       = {Compos. Math.},
   fjournal      = {Compositio Mathematica},
@@ -7762,6 +7747,21 @@
   mrnumber      = {3305308},
   doi           = {10.1112/S0010437X14007532},
   url           = {https://doi.org/10.1112/S0010437X14007532}
+}
+@article{borodin.corwin.ea:15:spectral*1,
+  author        = {Borodin, Alexei and Corwin, Ivan and Petrov, Leonid and Sasamoto, Tomohiro},
+  title         = {Spectral theory for interacting particle systems solvable by coordinate {B}ethe ansatz},
+  journal       = {Comm. Math. Phys.},
+  fjournal      = {Communications in Mathematical Physics},
+  volume        = {339},
+  year          = {2015},
+  number        = {3},
+  pages         = {1167--1245},
+  issn          = {0010-3616},
+  mrclass       = {82B23 (81R12)},
+  mrnumber      = {3385995},
+  doi           = {10.1007/s00220-015-2424-7},
+  url           = {https://doi.org/10.1007/s00220-015-2424-7}
 }
 @article{borodin.corwin.ea:16:observables,
   author        = {Borodin, Alexei and Corwin, Ivan and Gorin, Vadim and Shakirov, Shamil},
@@ -11384,6 +11384,18 @@
 }
 @incollection{bourgain:02:on*1,
   author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
+}
+@incollection{bourgain:02:on*2,
+  author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential},
   note          = {Dedicated to the memory of Thomas H. Wolff},
   journal       = {J. Anal. Math.},
@@ -11397,18 +11409,6 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/BF02868469},
   url           = {https://doi.org/10.1007/BF02868469}
-}
-@incollection{bourgain:02:on*2,
-  author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
 }
 @article{bourgain:02:on*3,
   author        = {Bourgain, Jean},
@@ -11555,22 +11555,6 @@
   url           = {https://doi.org/10.1016/j.crma.2004.03.027}
 }
 @incollection{bourgain:04:on,
-  author        = {Bourgain, J.},
-  title         = {On localization for lattice {S}chr\"{o}dinger operators involving {B}ernoulli variables},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {1850},
-  pages         = {77--99},
-  publisher     = {Springer, Berlin},
-  year          = {2004},
-  isbn          = {3-540-22360-6},
-  mrclass       = {82B44 (47B39 47B80 47N55)},
-  mrnumber      = {2087153},
-  mrreviewer    = {David\ Damanik},
-  doi           = {10.1007/978-3-540-44489-3\_9},
-  url           = {https://doi.org/10.1007/978-3-540-44489-3\_9}
-}
-@incollection{bourgain:04:on*1,
   author        = {Bourgain, Jean},
   title         = {On quasi-periodic lattice {S}chr\"{o}dinger operators},
   note          = {Partial differential equations and applications},
@@ -11585,6 +11569,22 @@
   mrnumber      = {2026184},
   doi           = {10.3934/dcds.2004.10.75},
   url           = {https://doi.org/10.3934/dcds.2004.10.75}
+}
+@incollection{bourgain:04:on*1,
+  author        = {Bourgain, J.},
+  title         = {On localization for lattice {S}chr\"{o}dinger operators involving {B}ernoulli variables},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {1850},
+  pages         = {77--99},
+  publisher     = {Springer, Berlin},
+  year          = {2004},
+  isbn          = {3-540-22360-6},
+  mrclass       = {82B44 (47B39 47B80 47N55)},
+  mrnumber      = {2087153},
+  mrreviewer    = {David\ Damanik},
+  doi           = {10.1007/978-3-540-44489-3\_9},
+  url           = {https://doi.org/10.1007/978-3-540-44489-3\_9}
 }
 @article{bourgain:04:remark,
   author        = {Bourgain, Jean},
@@ -12464,23 +12464,7 @@
   mrnumber      = {3329846},
   mrreviewer    = {Brett\ D.\ Wick}
 }
-@incollection{bourgain:14:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {2116},
-  pages         = {71--83},
-  publisher     = {Springer, Cham},
-  year          = {2014},
-  isbn          = {978-3-319-09476-2; 978-3-319-09477-9},
-  mrclass       = {35P15 (35J10 35P05 47B39 81Q12 82B20 82B44)},
-  mrnumber      = {3364680},
-  mrreviewer    = {Michael\ A.\ Perelmuter},
-  doi           = {10.1007/978-3-319-09477-9\_6},
-  url           = {https://doi.org/10.1007/978-3-319-09477-9\_6}
-}
-@article{bourgain:14:on*2,
+@article{bourgain:14:on*1,
   author        = {Bourgain, Jean},
   title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
   journal       = {Israel J. Math.},
@@ -12495,6 +12479,22 @@
   mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
   doi           = {10.1007/s11856-014-1059-2},
   url           = {https://doi.org/10.1007/s11856-014-1059-2}
+}
+@incollection{bourgain:14:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {2116},
+  pages         = {71--83},
+  publisher     = {Springer, Cham},
+  year          = {2014},
+  isbn          = {978-3-319-09476-2; 978-3-319-09477-9},
+  mrclass       = {35P15 (35J10 35P05 47B39 81Q12 82B20 82B44)},
+  mrnumber      = {3364680},
+  mrreviewer    = {Michael\ A.\ Perelmuter},
+  doi           = {10.1007/978-3-319-09477-9\_6},
+  url           = {https://doi.org/10.1007/978-3-319-09477-9\_6}
 }
 @incollection{bourgain:14:on*3,
   author        = {Bourgain, Jean},
@@ -13158,20 +13158,6 @@
 }
 @article{bourgain:80:on,
   author        = {Bourgain, J.},
-  title         = {On lacunary sets},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {32},
-  year          = {1980},
-  number        = {1},
-  pages         = {29--32},
-  issn          = {0037-9476},
-  mrclass       = {05A99},
-  mrnumber      = {682989},
-  mrreviewer    = {J.\ Spencer}
-}
-@article{bourgain:80:on*1,
-  author        = {Bourgain, J.},
   title         = {On separable {B}anach spaces, universal for all separable reflexive spaces},
   journal       = {Proc. Amer. Math. Soc.},
   fjournal      = {Proceedings of the American Mathematical Society},
@@ -13185,6 +13171,20 @@
   mrreviewer    = {Zvi\ Altshuler},
   doi           = {10.2307/2043243},
   url           = {https://doi.org/10.2307/2043243}
+}
+@article{bourgain:80:on*1,
+  author        = {Bourgain, J.},
+  title         = {On lacunary sets},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {32},
+  year          = {1980},
+  number        = {1},
+  pages         = {29--32},
+  issn          = {0037-9476},
+  mrclass       = {05A99},
+  mrnumber      = {682989},
+  mrreviewer    = {J.\ Spencer}
 }
 @article{bourgain:80:on*2,
   author        = {Bourgain, J.},
@@ -13931,18 +13931,6 @@
   mrreviewer    = {Colin\ C.\ Graham}
 }
 @incollection{bourgain:84:sur,
-  author        = {Bourgain, Jean},
-  title         = {Sur le minimum de certaines sommes de cosinus},
-  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
-  series        = {Publ. Math. Orsay},
-  volume        = {84-1},
-  pages         = {Exp. No. 2, 7},
-  publisher     = {Univ. Paris XI, Orsay},
-  year          = {1984},
-  mrclass       = {11L03 (42A32)},
-  mrnumber      = {740713}
-}
-@incollection{bourgain:84:sur*1,
   author        = {Bourgain, J.},
   title         = {Sur l'approximation dans {$H^infty$}},
   booktitle     = {Seminar on the geometry of {B}anach spaces, {V}ol. {I}, {II} ({P}aris, 1983)},
@@ -13954,6 +13942,18 @@
   mrclass       = {30E10 (41A35 46J15)},
   mrnumber      = {781582},
   mrreviewer    = {Burglind\ J\"{o}ricke}
+}
+@incollection{bourgain:84:sur*1,
+  author        = {Bourgain, Jean},
+  title         = {Sur le minimum de certaines sommes de cosinus},
+  booktitle     = {Harmonic analysis: study group on translation-invariant {B}anach spaces},
+  series        = {Publ. Math. Orsay},
+  volume        = {84-1},
+  pages         = {Exp. No. 2, 7},
+  publisher     = {Univ. Paris XI, Orsay},
+  year          = {1984},
+  mrclass       = {11L03 (42A32)},
+  mrnumber      = {740713}
 }
 @incollection{bourgain:84:vector,
   author        = {Bourgain, J.},
@@ -14018,20 +14018,6 @@
   mrnumber      = {832256}
 }
 @article{bourgain:85:on*1,
-  author        = {Bourgain, J.},
-  title         = {On square functions on the trigonometric system},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {37},
-  year          = {1985},
-  number        = {1},
-  pages         = {20--26},
-  issn          = {0037-9476},
-  mrclass       = {42A50 (42A45)},
-  mrnumber      = {847119},
-  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
-}
-@article{bourgain:85:on*2,
   author        = {Bourgain, Jean},
   title         = {On finitely generated closed ideals in {$H^infty(D)$}},
   journal       = {Ann. Inst. Fourier (Grenoble)},
@@ -14045,6 +14031,20 @@
   mrnumber      = {812323},
   mrreviewer    = {Richard\ Rochberg},
   url           = {http://www.numdam.org/item?id=AIF\_1985\_\_35\_4\_163\_0}
+}
+@article{bourgain:85:on*2,
+  author        = {Bourgain, J.},
+  title         = {On square functions on the trigonometric system},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {37},
+  year          = {1985},
+  number        = {1},
+  pages         = {20--26},
+  issn          = {0037-9476},
+  mrclass       = {42A50 (42A45)},
+  mrnumber      = {847119},
+  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
 }
 @article{bourgain:85:on*3,
   author        = {Bourgain, J.},
@@ -14171,22 +14171,6 @@
 }
 @article{bourgain:86:on*1,
   author        = {Bourgain, J.},
-  title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {54},
-  year          = {1986},
-  number        = {2},
-  pages         = {227--241},
-  issn          = {0021-2172},
-  mrclass       = {47A65},
-  mrnumber      = {852479},
-  mrreviewer    = {Vern\ Paulsen},
-  doi           = {10.1007/BF02764943},
-  url           = {https://doi.org/10.1007/BF02764943}
-}
-@article{bourgain:86:on*2,
-  author        = {Bourgain, J.},
   title         = {On the {$L^p$}-bounds for maximal functions associated to convex bodies in {\${\bf R}^n\$}},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14200,6 +14184,22 @@
   mrreviewer    = {Roger\ L.\ Jones},
   doi           = {10.1007/BF02764955},
   url           = {https://doi.org/10.1007/BF02764955}
+}
+@article{bourgain:86:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {54},
+  year          = {1986},
+  number        = {2},
+  pages         = {227--241},
+  issn          = {0021-2172},
+  mrclass       = {47A65},
+  mrnumber      = {852479},
+  mrreviewer    = {Vern\ Paulsen},
+  doi           = {10.1007/BF02764943},
+  url           = {https://doi.org/10.1007/BF02764943}
 }
 @article{bourgain:86:on*3,
   author        = {Bourgain, J.},
@@ -14351,23 +14351,7 @@
   mrnumber      = {934289},
   mrreviewer    = {Alberto\ Torchinsky}
 }
-@incollection{bourgain:87:on,
-  author        = {Bourgain, J.},
-  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
-  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1267},
-  pages         = {168--176},
-  publisher     = {Springer, Berlin},
-  year          = {1987},
-  isbn          = {3-540-18103-2},
-  mrclass       = {42B25 (42B15)},
-  mrnumber      = {907693},
-  mrreviewer    = {Roger\ L.\ Jones},
-  doi           = {10.1007/BFb0078144},
-  url           = {https://doi.org/10.1007/BFb0078144}
-}
-@article{bourgain:87:on*1,
+@article{bourgain:87:on,
   author        = {Bourgain, J.},
   title         = {On the {H}ausdorff dimension of harmonic measure in higher dimension},
   journal       = {Invent. Math.},
@@ -14383,7 +14367,7 @@
   doi           = {10.1007/BF01389238},
   url           = {https://doi.org/10.1007/BF01389238}
 }
-@incollection{bourgain:87:on*2,
+@incollection{bourgain:87:on*1,
   author        = {Bourgain, J.},
   title         = {On lattice packing of convex symmetric sets in {${\bf R}^n$}},
   booktitle     = {Geometrical aspects of functional analysis (1985/86)},
@@ -14398,6 +14382,22 @@
   mrreviewer    = {J.\ M.\ Wills},
   doi           = {10.1007/BFb0078132},
   url           = {https://doi.org/10.1007/BFb0078132}
+}
+@incollection{bourgain:87:on*2,
+  author        = {Bourgain, J.},
+  title         = {On dimension free maximal inequalities for convex symmetric bodies in {${\bf R}^n$}},
+  booktitle     = {Geometrical aspects of functional analysis (1985/86)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1267},
+  pages         = {168--176},
+  publisher     = {Springer, Berlin},
+  year          = {1987},
+  isbn          = {3-540-18103-2},
+  mrclass       = {42B25 (42B15)},
+  mrnumber      = {907693},
+  mrreviewer    = {Roger\ L.\ Jones},
+  doi           = {10.1007/BFb0078144},
+  url           = {https://doi.org/10.1007/BFb0078144}
 }
 @article{bourgain:87:on*3,
   author        = {Bourgain, Jean},
@@ -14824,22 +14824,6 @@
   url           = {https://doi.org/10.1007/BF01895639}
 }
 @incollection{bourgain:91:on,
-  author        = {Bourgain, Jean},
-  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
-  booktitle     = {Geometric aspects of functional analysis (1989--90)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1469},
-  pages         = {179--191},
-  publisher     = {Springer, Berlin},
-  year          = {1991},
-  isbn          = {3-540-54024-5},
-  mrclass       = {42B15 (42B25 46E30)},
-  mrnumber      = {1122623},
-  mrreviewer    = {Peter\ I.\ Lizorkin},
-  doi           = {10.1007/BFb0089225},
-  url           = {https://doi.org/10.1007/BFb0089225}
-}
-@incollection{bourgain:91:on*1,
   author        = {Bourgain, J.},
   title         = {On the distribution of polynomials on high-dimensional convex sets},
   booktitle     = {Geometric aspects of functional analysis (1989--90)},
@@ -14854,6 +14838,22 @@
   mrreviewer    = {Wolfgang\ Lusky},
   doi           = {10.1007/BFb0089219},
   url           = {https://doi.org/10.1007/BFb0089219}
+}
+@incollection{bourgain:91:on*1,
+  author        = {Bourgain, Jean},
+  title         = {On the restriction and multiplier problems in {${\bf R}^3$}},
+  booktitle     = {Geometric aspects of functional analysis (1989--90)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1469},
+  pages         = {179--191},
+  publisher     = {Springer, Berlin},
+  year          = {1991},
+  isbn          = {3-540-54024-5},
+  mrclass       = {42B15 (42B25 46E30)},
+  mrnumber      = {1122623},
+  mrreviewer    = {Peter\ I.\ Lizorkin},
+  doi           = {10.1007/BFb0089225},
+  url           = {https://doi.org/10.1007/BFb0089225}
 }
 @article{bourgain:91:on*2,
   author        = {Bourgain, J.},
@@ -25370,21 +25370,6 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -25398,6 +25383,21 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -28132,18 +28132,6 @@
 }
 @book{dunford.schwartz:88:linear,
   author        = {Dunford, Nelson and Schwartz, Jacob T.},
-  title         = {Linear operators. {P}art {I}},
-  series        = {Wiley Classics Library},
-  note          = {General theory, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1958 original, A Wiley-Interscience Publication},
-  publisher     = {John Wiley \& Sons, Inc., New York},
-  year          = {1988},
-  pages         = {xiv+858},
-  isbn          = {0-471-60848-3},
-  mrclass       = {47-01 (46-01)},
-  mrnumber      = {1009162}
-}
-@book{dunford.schwartz:88:linear*1,
-  author        = {Dunford, Nelson and Schwartz, Jacob T.},
   title         = {Linear operators. {P}art {II}},
   series        = {Wiley Classics Library},
   note          = {Spectral theory. Selfadjoint operators in Hilbert space, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1963 original, A Wiley-Interscience Publication},
@@ -28153,6 +28141,18 @@
   isbn          = {0-471-60847-5},
   mrclass       = {47-01 (46-01)},
   mrnumber      = {1009163}
+}
+@book{dunford.schwartz:88:linear*1,
+  author        = {Dunford, Nelson and Schwartz, Jacob T.},
+  title         = {Linear operators. {P}art {I}},
+  series        = {Wiley Classics Library},
+  note          = {General theory, With the assistance of William G. Bade and Robert G. Bartle, Reprint of the 1958 original, A Wiley-Interscience Publication},
+  publisher     = {John Wiley \& Sons, Inc., New York},
+  year          = {1988},
+  pages         = {xiv+858},
+  isbn          = {0-471-60848-3},
+  mrclass       = {47-01 (46-01)},
+  mrnumber      = {1009162}
 }
 @article{dunlap.gu.ea:20:fluctuations,
   author        = {Dunlap, Alexander and Gu, Yu and Ryzhik, Lenya and Zeitouni, Ofer},
@@ -36466,7 +36466,23 @@
   mrnumber      = {1294070},
   url           = {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z\&origin=MSN}
 }
-@incollection{hara.slade:00:scaling,
+@article{hara.slade:00:scaling,
+  author        = {Hara, Takashi and Slade, Gordon},
+  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
+  journal       = {J. Statist. Phys.},
+  fjournal      = {Journal of Statistical Physics},
+  volume        = {99},
+  year          = {2000},
+  number        = {5-6},
+  pages         = {1075--1168},
+  issn          = {0022-4715},
+  mrclass       = {82B43 (60K35)},
+  mrnumber      = {1773141},
+  mrreviewer    = {Remco van der Hofstad},
+  doi           = {10.1023/A:1018628503898},
+  url           = {https://doi.org/10.1023/A:1018628503898}
+}
+@incollection{hara.slade:00:scaling*1,
   author        = {Hara, Takashi and Slade, Gordon},
   title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {II}. {I}ntegrated super-{B}rownian excursion},
   note          = {Probabilistic techniques in equilibrium and nonequilibrium statistical physics},
@@ -36482,22 +36498,6 @@
   mrreviewer    = {Remco van der Hofstad},
   doi           = {10.1063/1.533186},
   url           = {https://doi.org/10.1063/1.533186}
-}
-@article{hara.slade:00:scaling*1,
-  author        = {Hara, Takashi and Slade, Gordon},
-  title         = {The scaling limit of the incipient infinite cluster in high-dimensional percolation. {I}. {C}ritical exponents},
-  journal       = {J. Statist. Phys.},
-  fjournal      = {Journal of Statistical Physics},
-  volume        = {99},
-  year          = {2000},
-  number        = {5-6},
-  pages         = {1075--1168},
-  issn          = {0022-4715},
-  mrclass       = {82B43 (60K35)},
-  mrnumber      = {1773141},
-  mrreviewer    = {Remco van der Hofstad},
-  doi           = {10.1023/A:1018628503898},
-  url           = {https://doi.org/10.1023/A:1018628503898}
 }
 @article{hara.slade:91:critical,
   author        = {Hara, Takashi and Slade, Gordon},
@@ -60233,22 +60233,6 @@
 }
 @article{seppalainen:93:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
-  title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
-  journal       = {Probab. Theory Related Fields},
-  fjournal      = {Probability Theory and Related Fields},
-  volume        = {97},
-  year          = {1993},
-  number        = {1-2},
-  pages         = {103--112},
-  issn          = {0178-8051},
-  mrclass       = {60F10 (60G60)},
-  mrnumber      = {1240718},
-  mrreviewer    = {Francis Comets},
-  doi           = {10.1007/BF01199314},
-  url           = {https://doi.org/10.1007/BF01199314}
-}
-@article{seppalainen:93:large*1,
-  author        = {Sepp\"{a}l\"{a}inen, Timo},
   title         = {Large deviations for lattice systems. {I}. {P}arametrized independent fields},
   journal       = {Probab. Theory Related Fields},
   fjournal      = {Probability Theory and Related Fields},
@@ -60262,6 +60246,22 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/BF01192135},
   url           = {https://doi.org/10.1007/BF01192135}
+}
+@article{seppalainen:93:large*1,
+  author        = {Sepp\"{a}l\"{a}inen, Timo},
+  title         = {Large deviations for lattice systems. {II}. {N}onstationary independent fields},
+  journal       = {Probab. Theory Related Fields},
+  fjournal      = {Probability Theory and Related Fields},
+  volume        = {97},
+  year          = {1993},
+  number        = {1-2},
+  pages         = {103--112},
+  issn          = {0178-8051},
+  mrclass       = {60F10 (60G60)},
+  mrnumber      = {1240718},
+  mrreviewer    = {Francis Comets},
+  doi           = {10.1007/BF01199314},
+  url           = {https://doi.org/10.1007/BF01199314}
 }
 @article{seppalainen:94:large,
   author        = {Sepp\"{a}l\"{a}inen, Timo},
@@ -61982,21 +61982,6 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -62010,6 +61995,21 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
@@ -62029,20 +62029,6 @@
 }
 @book{talagrand:11:mean,
   author        = {Talagrand, Michel},
-  title         = {Mean field models for spin glasses. {V}olume {II}},
-  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
-  volume        = {55},
-  note          = {Advanced replica-symmetry and low temperature},
-  publisher     = {Springer, Heidelberg},
-  year          = {2011},
-  pages         = {xii+629},
-  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber      = {3024566},
-  mrreviewer    = {Francis Comets}
-}
-@book{talagrand:11:mean*1,
-  author        = {Talagrand, Michel},
   title         = {Mean field models for spin glasses. {V}olume {I}},
   series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
   volume        = {54},
@@ -62056,6 +62042,20 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/978-3-642-15202-3},
   url           = {https://doi.org/10.1007/978-3-642-15202-3}
+}
+@book{talagrand:11:mean*1,
+  author        = {Talagrand, Michel},
+  title         = {Mean field models for spin glasses. {V}olume {II}},
+  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
+  volume        = {55},
+  note          = {Advanced replica-symmetry and low temperature},
+  publisher     = {Springer, Heidelberg},
+  year          = {2011},
+  pages         = {xii+629},
+  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber      = {3024566},
+  mrreviewer    = {Francis Comets}
 }
 @article{talagrand:94:sharper,
   author        = {Talagrand, M.},
@@ -66447,22 +66447,6 @@
 }
 @article{zeitouni.bobrovsky:86:on,
   author        = {Zeitouni, O. and Bobrovsky, B. Z.},
-  title         = {On the joint nonlinear filtering-smoothing of diffusion processes},
-  journal       = {Systems Control Lett.},
-  fjournal      = {Systems \& Control Letters},
-  volume        = {7},
-  year          = {1986},
-  number        = {4},
-  pages         = {317--321},
-  issn          = {0167-6911,1872-7956},
-  mrclass       = {60G15 (93E11)},
-  mrnumber      = {850446},
-  mrreviewer    = {V\v{e}ra\ L\'{a}nsk\'{a}},
-  doi           = {10.1016/0167-6911(86)90046-0},
-  url           = {https://doi.org/10.1016/0167-6911(86)90046-0}
-}
-@article{zeitouni.bobrovsky:86:on*1,
-  author        = {Zeitouni, O. and Bobrovsky, B. Z.},
   title         = {On the reference probability approach to the equations of nonlinear filtering},
   journal       = {Stochastics},
   fjournal      = {Stochastics},
@@ -66476,6 +66460,22 @@
   mrreviewer    = {Rajeeva\ L.\ Karandikar},
   doi           = {10.1080/17442508608833421},
   url           = {https://doi.org/10.1080/17442508608833421}
+}
+@article{zeitouni.bobrovsky:86:on*1,
+  author        = {Zeitouni, O. and Bobrovsky, B. Z.},
+  title         = {On the joint nonlinear filtering-smoothing of diffusion processes},
+  journal       = {Systems Control Lett.},
+  fjournal      = {Systems \& Control Letters},
+  volume        = {7},
+  year          = {1986},
+  number        = {4},
+  pages         = {317--321},
+  issn          = {0167-6911,1872-7956},
+  mrclass       = {60G15 (93E11)},
+  mrnumber      = {850446},
+  mrreviewer    = {V\v{e}ra\ L\'{a}nsk\'{a}},
+  doi           = {10.1016/0167-6911(86)90046-0},
+  url           = {https://doi.org/10.1016/0167-6911(86)90046-0}
 }
 @article{zeitouni.dembo:87:erratum,
   author        = {Zeitouni, O. and Dembo, A.},
@@ -67240,21 +67240,6 @@
   url           = {https://doi.org/10.1016/j.jde.2008.02.019}
 }
 @article{zhang:09:variational,
-  author        = {Zhang, Xicheng},
-  title         = {A variational representation for random functionals on abstract {W}iener spaces},
-  journal       = {J. Math. Kyoto Univ.},
-  fjournal      = {Journal of Mathematics of Kyoto University},
-  volume        = {49},
-  year          = {2009},
-  number        = {3},
-  pages         = {475--490},
-  issn          = {0023-608X},
-  mrclass       = {60H07 (60F10)},
-  mrnumber      = {2583599},
-  doi           = {10.1215/kjm/1260975036},
-  url           = {https://doi.org/10.1215/kjm/1260975036}
-}
-@article{zhang:09:variational*1,
   author        = {Zhang, Tusheng},
   title         = {Variational inequalities and optimization for {M}arkov processes associated with semi-{D}irichlet forms},
   journal       = {SIAM J. Control Optim.},
@@ -67269,6 +67254,21 @@
   mrreviewer    = {Arie Leizarowitz},
   doi           = {10.1137/080737630},
   url           = {https://doi.org/10.1137/080737630}
+}
+@article{zhang:09:variational*1,
+  author        = {Zhang, Xicheng},
+  title         = {A variational representation for random functionals on abstract {W}iener spaces},
+  journal       = {J. Math. Kyoto Univ.},
+  fjournal      = {Journal of Mathematics of Kyoto University},
+  volume        = {49},
+  year          = {2009},
+  number        = {3},
+  pages         = {475--490},
+  issn          = {0023-608X},
+  mrclass       = {60H07 (60F10)},
+  mrnumber      = {2583599},
+  doi           = {10.1215/kjm/1260975036},
+  url           = {https://doi.org/10.1215/kjm/1260975036}
 }
 @article{zhang:10:stochastic,
   author        = {Zhang, Xicheng},
